# reaction-diffusion

./: CMakeLists.txt  LICENSE.md  README.md  paramaters.txt
include/: Framebuffer.h  PlatformSpecification.h
kernels/: image.cl
src/: Framebuffer.cpp  main.cpp
