CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( "reaction-diffusion" )

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake $ENV{CMAKE_MODULE_PATH})

SET( CXX clang++)
SET( FLAGS )

set( SRC src)
set( INC include)

SET( PROJ_SOURCES
  ${SRC}/main.cpp
  ${SRC}/Framebuffer.cpp
  ${SRC}/Perlin.cpp
  )
SET( PROJ_HEADERS
  ${INC}/PlatformSpecification.h
  ${INC}/Framebuffer.h
  ${INC}/Perlin.h
  )

ADD_EXECUTABLE( ${CMAKE_PROJECT_NAME} ${PROJ_SOURCES} ${PROJ_HEADERS} )

FIND_PACKAGE( Boost REQUIRED COMPONENTS system thread chrono )
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( GLFW REQUIRED )

IF( ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
  
  find_package( GLEW REQUIRED )
  if ( GLEW_FOUND )
    
    INCLUDE_DIRECTORIES( ${GLEW_INCLUDE_DIR} )
    TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME} ${GLEW_LIBRARY} )
    
  endif ( GLEW_FOUND )
  
ENDIF()

IF( ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" )

    SET(CMAKE_CXX_FLAGS "-std=c++11")
    
ENDIF()

INCLUDE_DIRECTORIES(
  include
  ${Boost_INCLUDE_DIRS}
  ${GLFW_INCLUDE_DIR}
  )

SET(CMAKE_CXX_COMPILER ${CXX})
SET(CMAKE_CXX_FLAGS ${FLAGS})

TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME}
  ${Boost_LIBRARIES}
  ${GLFW_LIBRARIES}
  ${OPENGL_LIBRARIES}
  )